add user profiles; activities, housing models
