# backend/app/Models/UserProfile.php
@@ -6,7 +6,7 @@ use Illuminate\Database\Eloquent\Model;
 
 class UserProfile extends Model
 {
-    protected $fillable = ['user_id', 'phone', 'avatar_url', 'bio'];
+    protected $fillable = ['user_id', 'phone', 'address', 'avatar_url', 'bio'];
 
     public function user() {
         return $this->belongsTo(User::class);
