# backend/routes/api.php
@@ -1,7 +1,9 @@
 <?php
 
-use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\LoginController;
+use App\Http\Controllers\Auth\RegisterController;
+use App\Http\Controllers\Management\ProfileController;
+use App\Http\Controllers\Management\SettingsController;
 use Illuminate\Support\Facades\Route;
 
 Route::group(['prefix' => 'auth'], function () {
@@ -10,4 +12,10 @@ Route::group(['prefix' => 'auth'], function () {
     Route::post('/logout', [LoginController::class, 'logout']);
     Route::post('/refresh', [LoginController::class, 'refresh']);
     Route::get('/me', [LoginController::class, 'me']);
+});
+
+Route::prefix('management')->middleware('auth:api')->group(function () {
+    Route::get('/profile', [ProfileController::class, 'index']);
+    Route::put('/profile', [ProfileController::class, 'update']);
+    Route::get('/settings', [SettingsController::class, 'index']);
 });
